apollo-federation/src/connectors/validation/snapshots/validation_tests@missing_http_method_on_connect.graphql.snap
---
source: apollo-federation/src/connectors/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/connectors/validation/test_data/missing_http_method_on_connect.graphql
---
[
    Message {
        code: MissingHttpMethod,
        message: "`@connect(http:)` on `Query.resources` must specify an HTTP method.",
        locations: [
            9:54..9:56,
        ],
    },
]
