apollo-federation/src/connectors/validation/snapshots/validation_tests@missing_source_import.graphql.snap
---
source: apollo-federation/src/connectors/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/connectors/validation/test_data/missing_source_import.graphql
---
[
    Message {
        code: NoSourcesDefined,
        message: "`@connect(source: \"v2\")` on `Query.resources` specifies a source, but none are defined. Try adding `@connect__source(name: \"v2\")` to the schema.",
        locations: [
            7:14..7:26,
        ],
    },
    Message {
        code: NoSourceImport,
        message: "The `@source` directive is not imported. Try adding `@source` to `import` for `@link(url: \"https://specs.apollo.dev/connect/v0.2\", import: [\"@connect\"])`",
        locations: [
            2:3..2:76,
        ],
    },
]
