apollo-federation/src/connectors/validation/snapshots/validation_tests@multiple_http_methods_on_connect.graphql.snap
---
source: apollo-federation/src/connectors/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/connectors/validation/test_data/multiple_http_methods_on_connect.graphql
---
[
    Message {
        code: MultipleHttpMethods,
        message: "`@connect(http:)` on `Query.resources` cannot specify more than one HTTP method.",
        locations: [
            12:20..12:32,
            12:42..12:53,
        ],
    },
]
