apollo-federation/src/connectors/validation/snapshots/validation_tests@multiple_spreads_missing_field_error.graphql.snap
---
source: apollo-federation/src/connectors/validation/mod.rs
expression: result.errors
input_file: apollo-federation/src/connectors/validation/test_data/multiple_spreads_missing_field_error.graphql
---
[]
